--- a/app.css
+++ b/app.css
@@ -60,8 +60,9 @@ body {
 }
 
 .title-step {
-    font-size: 12px;
+    font-size: 16px;
     color: #222;
+    font-weight: bold;
 }
 
 .title-btn {
@@ -145,7 +146,38 @@ body {
 }
 
 /* 스텝 1 */
-.s1-left {
+.s1-wrapper {
+    padding: 20px;
+}
+
+.s1-kingdoms {
+    width: 80%;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.s1-kingdom {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f0f0;
+    border-radius: 30px;
+    font-size: 36px;
+}
+
+.s1-kingdom:first-child {
+    margin-right: 20px;
+}
+
+.s1-active {
+    background-color: #77966D;
+    color: #fff;
+}
+
+/* 스텝 2 */
+.s2-left {
     width: 200px;
     height: 100%;
     background-color: #e8e8e8;
@@ -156,19 +188,19 @@ body {
     overflow-y: scroll;
 }
 
-.s1-our-products-title {
+.s2-our-products-title {
     text-align: center;
     font-size: 18px;
     color: #000;
 }
 
-.s1-delete-desc {
+.s2-delete-desc {
     text-align: center;
     font-size: 12px;
     color: #888;
 }
 
-.s1-our-product {
+.s2-our-product {
     width: 100%;
     border-radius: 20px;
     padding: 16px;
@@ -179,11 +211,11 @@ body {
     cursor: pointer;
 }
 
-.s1-our-product:hover {
+.s2-our-product:hover {
     background-color: #aaa;
 }
 
-.s1-right {
+.s2-right {
     width: calc(100% - 200px);
     height: 100%;
     overflow-y: scroll;
@@ -191,14 +223,14 @@ body {
     padding: 20px;
 }
 
-.s1-right-title {
+.s2-right-title {
     font-size: 24px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
 }
 
-.s1-products-grid {
+.s2-products-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(200px, auto);
@@ -207,7 +239,7 @@ body {
     margin-bottom: 20px;
 }
 
-.s1-product {
+.s2-product {
     color: #fff;
     border-radius: 30px;
     display: flex;
@@ -221,31 +253,31 @@ body {
     background-color: #333;
 }
 
-.s1-product:hover {
+.s2-product:hover {
     opacity: 0.8;
 }
 
-.s1-product-title {
+.s2-product-title {
     font-size: 18px;
     margin-bottom: 10px;
 }
 
-.s1-product-reward {
+.s2-product-reward {
     font-size: 12px;
     margin-top: 6px;
 }
 
-/* 스텝 2 */
-.s2-wrapper {
+/* 스텝 3 */
+.s3-wrapper {
     padding: 20px;
 }
 
-.s4-absentees {
-    width: 100%;
+.s3-absentees {
+    width: 80%;
     flex: 1;
 }
 
-.s2-absentees-grid {
+.s3-absentees-grid {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-auto-rows: minmax(70px, auto);
@@ -254,33 +286,34 @@ body {
     padding: 8px;
 }
 
-.s2-absentee {
-    border-radius: 6px;
+.s3-absentee {
+    border-radius: 10px;
     color: #000;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px 0;
+    background-color: #f0f0f0;
     cursor: pointer;
 }
 
-.s2-absentee-target {
+.s3-absentee-target {
     background-color: #323232;
     color: #fff;
 }
 
-.s2-absentee-text {
+.s3-absentee-text {
     font-size: 12px;
 }
 
-/* 스텝 3 */
-.s3-wrapper {
+/* 스텝 4 */
+.s4-wrapper {
     overflow-x: scroll;
     padding: 20px;
 }
 
-.s3-product {
+.s4-product {
     width: 300px;
     height: 100%;
     padding: 10px 20px;
@@ -293,30 +326,30 @@ body {
     overflow: hidden;
 }
 
-.s3-dup {
+.s4-dup {
     opacity: 0.2;
 }
 
-.s3-product:not(:first-child) {
+.s4-product:not(:first-child) {
     margin-left: 10px;
 }
 
-.s3-product-title {
+.s4-product-title {
     font-weight: bold;
     font-size: 18px;
     margin-bottom: 10px;
 }
 
-.s3-product-rewards {
+.s4-product-rewards {
     text-align: center;
 }
 
-.s3-product-reward {
+.s4-product-reward {
     font-size: 14px;
     margin-bottom: 6px;
 }
 
-.s3-members {
+.s4-members {
     width: 100%;
     flex: 1;
     display: flex;
@@ -328,7 +361,7 @@ body {
     overflow: hidden;
 }
 
-.s3-member-list {
+.s4-member-list {
     width: 100%;
     overflow-y: scroll;
     background-color: #fff;
@@ -338,7 +371,7 @@ body {
     flex-direction: column;
 }
 
-.s3-member {
+.s4-member {
     width: 100%;
     padding: 10px 20px;
     display: flex;
@@ -348,25 +381,25 @@ body {
     cursor: pointer;
 }
 
-.s3-member-name {
+.s4-member-name {
     display: flex;
     align-items: center;
 }
 
-.s3-included {
+.s4-included {
     font-weight: bold;
     color: #000;
 }
 
-.s3-excluded {
+.s4-excluded {
     color: #bbb;
 }
 
-.s3-member:not(:last-child) {
+.s4-member:not(:last-child) {
     border-bottom: 1px solid #eee;
 }
 
-.s3-total-members {
+.s4-total-members {
     height: 40px;
     font-size: 12px;
     color: #000;
@@ -374,15 +407,15 @@ body {
     align-items: center;
 }
 
-.s3-current-members {
+.s4-current-members {
     color: #36c;
     font-weight: bold;
 }
 
-.s3-bottom-wrapper {
+.s4-bottom-wrapper {
 }
 
-.s3-target-clone {
+.s4-target-clone {
     margin: 10px;
     display: flex;
     justify-content: space-between;
@@ -390,18 +423,18 @@ body {
     font-size: 12px;
 }
 
-.s3-clone-select {
+.s4-clone-select {
     width: 150px;
 }
 
-.s3-clone-btn-wrapper {
+.s4-clone-btn-wrapper {
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: right;
 }
 
-.s3-clone-btn {
+.s4-clone-btn {
     width: 40px;
     color: #fff;
     background-color: #1A936F;
@@ -409,17 +442,17 @@ body {
     margin-right: 0 !important;
 }
 
-.s3-target-bottom {
+.s4-target-bottom {
     display: flex;
     justify-content: space-between;
     margin: 10px;
 }
 
-.s3-target-btns {
+.s4-target-btns {
     display: flex;
 }
 
-.s3-target-btn {
+.s4-target-btn {
     height: 40px;
     border-radius: 10px;
     padding: 0 8px;
@@ -430,11 +463,11 @@ body {
     cursor: pointer;
 }
 
-.s3-target-btn:first-child {
+.s4-target-btn:first-child {
     margin-right: 4px;
 }
 
-.s3-member-btn {
+.s4-member-btn {
     height: 30px;
     border-radius: 10px;
     padding: 0 4px;
@@ -445,17 +478,17 @@ body {
     cursor: pointer;
 }
 
-.s3-include-btn {
+.s4-include-btn {
     background-color: #36c;
     color: #fff;
 }
 
-.s3-exclude-btn {
+.s4-exclude-btn {
     background-color: #F24236;
     color: #fff;
 }
 
-/* 스텝 4 */
+/* 스텝 5 */
 .step-4 {
     width: 100%;
     display: flex;
@@ -463,7 +496,7 @@ body {
     flex-direction: column;
 }
 
-.s4-reward-wrapper {
+.s5-reward-wrapper {
     width: 100%;
     flex: 1;
     display: flex;
@@ -477,12 +510,12 @@ body {
     transition: opacity 0.25s, transform 0.25s;
 }
 
-.s4-disappear {
+.s5-disappear {
     transform: translateY(50px);
     opacity: 0;
 }
 
-/* .s4-reward-vertical-wrapper {
+/* .s5-reward-vertical-wrapper {
     width: 100%;
     flex: 1;
     display: flex;
@@ -491,14 +524,14 @@ body {
     align-items: center;
 } */
 
-.s4-reward-dummy {
+.s5-reward-dummy {
     width: 100%;
     flex: 1;
     padding: 20px 0;
     font-size: 14px;
 }
 
-.s4-reward {
+.s5-reward {
     width: 100%;
     flex: 1;
     display: flex;
@@ -508,42 +541,42 @@ body {
     margin-top: 100px;
 }
 
-.s4-reward-type {
+.s5-reward-type {
     font-size: 10px;
 }
 
-.s4-reward-product {
+.s5-reward-product {
     font-size: 14px;
 }
 
-.s4-reward-image {
+.s5-reward-image {
     width: 64px;
     height: 64px;
     margin: 10px 0;
 }
 
-.s4-reward-name {
+.s5-reward-name {
     font-size: 32px;
     font-weight: bold;
 }
 
-.s4-reward-drawer {
+.s5-reward-drawer {
     margin-top: 10px;
     font-size: 48px;
     color: #1A936F
 }
 
-.s4-reward-info {
+.s5-reward-info {
     font-size: 12px;
     color: #888;
     margin-top: 10px;
 }
 
-.s4-finish {
+.s5-finish {
     color: #36c;
 }
 
-.s4-reward-btn-wrapper {
+.s5-reward-btn-wrapper {
     width: 100%;
     flex: 1;
     display: flex;
@@ -551,7 +584,7 @@ body {
     padding-top: 20px;
 }
 
-.s4-reward-btn {
+.s5-reward-btn {
     width: 72px;
     height: 72px;
     border-radius: 36px;
@@ -560,28 +593,28 @@ body {
     cursor: pointer;
 }
 
-.s4-drawing-btn {
+.s5-drawing-btn {
     background-color: #1A936F;
     margin-top: 10px;
     color: #fff;
 }
 
-.s4-next-btn {
+.s5-next-btn {
     background-color: #5E548E;
     color: #fff;
 }
-.s4-finish-btn {
+.s5-finish-btn {
     background-color: #36c;
     color: #fff;
 }
 
-.s4-members {
+.s5-members {
     width: 100%;
     flex: 1;
     background-color: #222;
 }
 
-.s4-members-grid {
+.s5-members-grid {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-auto-rows: minmax(70px, auto);
@@ -590,7 +623,7 @@ body {
     padding: 8px;
 }
 
-.s4-member {
+.s5-member {
     border-radius: 6px;
     background-color: 555;
     color: #fff;
@@ -603,42 +636,42 @@ body {
     padding: 10px 0;
 }
 
-.s4-stack1 {
+.s5-stack1 {
     background-color: #1A936F !important;
 }
 
-.s4-stack2 {
+.s5-stack2 {
     background-color: #5E548E !important;
 }
 
-.s4-gold-stack {
+.s5-gold-stack {
     background-color: #CE5374 !important;
 }
 
-.s4-not-target {
+.s5-not-target {
     opacity: 0.3;
 }
 
-.s4-highlighted {
+.s5-highlighted {
     background-color: #666 !important;
     color: #fff !important;
 }
 
-.s4-member-label {
+.s5-member-label {
     display: flex;
     align-items: center;
 }
 
-.s4-member-name {
+.s5-member-name {
     font-size: 18px;
 }
 
-.s4-member-reward {
+.s5-member-reward {
     font-size: 10px;
 }
 
-/* 스텝 5 */
-.s5-wrapper {
+/* 스텝 6 */
+.s6-wrapper {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -649,14 +682,14 @@ body {
     overflow-y: scroll;
 }
 
-.s5-grid {
+.s6-grid {
     display: grid;
     grid-auto-rows: minmax(76px, auto);
     column-gap: 20px;
     row-gap: 20px;
 }
 
-.s5-reward {
+.s6-reward {
     color: #000;
     border-radius: 20px;
     background-color: #eee;
@@ -665,30 +698,30 @@ body {
     padding: 16px;
 }
 
-.s5-reward-icon {
+.s6-reward-icon {
     width: 53px;
     height: 53px;
 }
 
-.s5-reward-detail {
+.s6-reward-detail {
     margin-left: 10px;
     display: flex;
     flex-direction: column;
 }
 
-.s5-reward-name {
+.s6-reward-name {
     font-size: 14px;
 }
 
-.s5-reward-member {
+.s6-reward-member {
     font-size: 18px;
 }
 
-.s5-drawers-text {
+.s6-drawers-text {
     margin-top: 50px;
 }
 
-.s5-level-up-target {
+.s6-level-up-target {
     margin-bottom: 10px;
 }
 
